src/objects/VPM_CommodityCode__c.object
<CustomObject>
    <description>Object that holds Commodity details. Collapsed view of Commodity including Family and Class per Commodity, separated via Record Types (Class) and dependent picklist (Family).</description>
    <fields>
        <fullName>VPM_AuthorisationGroup__c</fullName>
        <label>Authorisation Group</label>
        <picklist>
            <controllingField>VPM_VendorType__c</controllingField>
            <picklistValues>
                <fullName>3PM--3Pm America&apos;s_VMBA 3PM America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3PM--3PM Europe_VMBA 3PM Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3PM--3PM NAMCA, TUII, South Africa &amp; RUB_VMBA 3PM NAMCA South Afr RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3PM--3PM South &amp; North Asia &amp; SEAA_VMBA 3PM Asia SEAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Fragrances &amp; Flavours_VMBA Fragrances Flavors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Functional Chemicals_VMBA Functional Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Inorganics_VMBA Inorganics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Oleochemicals_VMBA Oleochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Petrochemicals_VMBA Petrochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Speciality Chemicals_VMBA Speciality Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Liquid Oils_VMBA Liquid Oils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Risk - Food Soft Commoditie_VMBA Food Soft Commodities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Risk - Oils &amp; Fats_VMBA Risk Oils and Fats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Risk - Petro Based_VMBA Petro Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Soft Commodities_VMBA Soft Commodities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Tropical Oils_VMBA Tropical Oils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee_Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight_Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingredients--Ingredients 1_VMBA Ingredients 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingredients--Ingredients 2_VMBA Ingredients 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingredients--Ingredients 3_VMBA Ingredients 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany_VMBA Intercompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany Transfer_VMBA Intercompany Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--HR_VMBA HR TRAVEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--Innovation &amp; Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--Innovation &amp; Professional Services_VMBA Outsourcing Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--IT_VMBA IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--Lakme Lever Ltd_VMBA Lakme Lever Ltd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_CSBVendor__c</fullName>
        <description>If the Commodity with Commodity Code 6902 - 80141629 is selected against a Vendor, this Vendor must be a CSB Vendor. System field used to help define Default Values</description>
        <formula>IF( VPM_CommodityCode__c = &quot;6902 - 80141629&quot;,TRUE,FALSE)</formula>
        <label>CSB Vendor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_CommodityClass__c</fullName>
        <description>The Commodity record type is the Commodity Class. To make Commodity Class searchable in lookup dialogues, the value of Record type name is written via WFR in to this field.</description>
        <label>Commodity Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CommodityCode__c</fullName>
        <description>Field to hold Commodity Code details</description>
        <externalId>true</externalId>
        <label>Commodity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CommodityFamily__c</fullName>
        <description>Field to hold Commodity Family</description>
        <label>Commodity Family</label>
        <picklist>
            <picklistValues>
                <fullName>Workplace Materials &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment &amp; MRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non - Ariba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Scope Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media (Placement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Agencies and Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Promotional and Sales Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_VendorType__c</fullName>
        <description>Field to hold Vendor type detials</description>
        <label>Vendor Type</label>
        <picklist>
            <picklistValues>
                <fullName>SCS_Supply Chain Services_G001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI_Production Item Vendor_G001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRGT_Freight Vendor_G001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCT_Russian Customs Tax Vendor_G001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS_Marketing Business Services_G001</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Commodity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>VPM_CommodityCode__c</columns>
        <columns>VPM_CommodityFamily__c</columns>
        <columns>VPM_VendorType__c</columns>
        <columns>VPM_CSBVendor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commodities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>